REGRESSION (Safari 15?): Blob videos slow to pause, affects CBS and CNN https://bugs.webkit.org/show_bug.cgi?id=234066

Reviewed by Jer Noble.

`MediaPlayerPrivateMediaSourceAVFObjC::playInternal()` calls `[m_synchronizer setRate:]`,
which will make the return value of `MediaPlayerPrivateMediaSourceAVFObjC::paused()` change
from true to false. But it won't push the new `paused` value back to the Web process.

`RemoteMediaPlayerProxy::play()` does call `sendCachedState()` after calling
`m_player->play()`, but because `MediaPlayerPrivateMediaSourceAVFObjC::playInternal()` is not
called in the same run loop, `sendCachedState()` won't send back the updated `paused` value either.

In most cases, this is not an issue, because other member functions of `RemoteMediaPlayerProxy`
will call `sendCachedState()` to push the updated `paused` value back to the Web process later.
However, we did find some videos need the `paused` value to be pushed back the Web process
in a timely manner.

No new tests, manually tested.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::playInternal):



Canonical link: https://commits.webkit.org/246304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288413 268f45cc-cd09-0410-ab3c-d52691b4dbfc